bk_ida/gccida/c1/expand_decl
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4344:4: error: expected ';' after expression
rtx v18; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4344:5: error: use of undeclared identifier 'v18'
rtx v18; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4346:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4348:6: error: use of undeclared identifier 'p_rtl'
rtx *p_rtl; // r15 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4350:4: error: expected ';' after expression
rtx v24; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4350:5: error: use of undeclared identifier 'v24'
rtx v24; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4351:6: error: use of undeclared identifier 'v25'
rtx *v25; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4352:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4352:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4354:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4354:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4355:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4355:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4388:22: error: use of undeclared identifier 'machine_mode'
v11 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4428:1: error: use of undeclared identifier 'v18'
v18 = assign_temp( decl, 1, 1, 1); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4429:21: error: use of undeclared identifier 'v18'
set_mem_attributes( v18, decl, 1); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4430:18: error: use of undeclared identifier 'v18'
decl->decl.rtl = v18; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4433:7: error: use of undeclared identifier 'v18'
if ( !v18 ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/stmt.c:4436:1: error: use of undeclared identifier 'v18'
v18 = decl->decl.rtl; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_decl/src/obj/stmt.o] Error 1
